--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.1.0",
@@ -24,13 +25,16 @@
     "express-fileupload": "^1.2.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.4.1",
+    "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "stripe": "^15.1.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
   },
